added mqtt, facial recognition pipline
